<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/qr_detected_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_detected"
        android:textAppearance="@style/Heading.4"
        android:textColor="@color/thistle"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/qr_detected_bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_detected_bonus"
        android:textAppearance="@style/small"
        android:textColor="@color/fairy_tale"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_detected_title"/>

    <ImageView
        android:id="@+id/qr_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/qr_logo_big"
        android:contentDescription="@string/qr_code_picture_description"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_picture"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/name_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abcd_451_26"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1.75"
            android:ellipsize="end"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/score_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_row"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/score_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_score_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10000_pts"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1.75"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button_description"
        android:src="@drawable/baseline_arrow_forward_24"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Button.Primary.Ver2"/>

</androidx.constraintlayout.widget.ConstraintLayout>