<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">

    <RelativeLayout
        android:layout_weight="0.075"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="24dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_alignParentStart="true"
            android:id="@+id/edit_profile_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button_description"
            android:src="@drawable/baseline_arrow_back_24"
            style="@style/Button.Primary"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.925">

        <ImageView
            android:id="@+id/edit_profile_profile"
            style="@style/Profile.Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:contentDescription="@string/user_profile_description"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/baseline_person_24">

        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit_profile_name"
            style="@style/Heading.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_profile"
            android:layout_centerHorizontal="true"
            android:text="@string/username"
            android:textColor="@color/thistle">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_profile_email_address"
            style="@style/Text.Display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:hint="dogwood2506@gmail.com"
            android:textColorHint="@color/thistle">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_profile_phone_number"
            style="@style/Text.Display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_profile_email_address"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:hint="(999) - 999 - 999"
            android:textColorHint="@color/thistle">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_profile_button_save"
            style="@style/Button.Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_profile_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/save_button_description"
            android:textAppearance="@style/small"
            android:textColor="@color/chinese_violet"
            app:strokeColor="@color/chinese_violet"
            app:strokeWidth="1dp">

        </com.google.android.material.button.MaterialButton>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/edit_profile_qr_quest"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/qr_logo">

        </ImageView>

        <LinearLayout
            android:id="@+id/edit_profile_alert"
            style="@style/Text.Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:clickable="false"
            android:orientation="horizontal"
            android:padding="4dp"
            android:visibility="invisible">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="Unsaved Changes!"
                android:textAppearance="@style/small"
                android:textColor="@color/thistle">

            </com.google.android.material.textview.MaterialTextView>

            <Button
                android:id="@+id/edit_profile_button_save_alert"
                style="@style/Button.Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="false"
                android:text="@string/save_button_description"
                android:textAppearance="@style/small">

            </Button>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit_profile_qr_quest"
            style="@style/Heading.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="QR QUEST"
            android:textColor="@color/thistle">

        </com.google.android.material.textview.MaterialTextView>

    </RelativeLayout>

</LinearLayout>