<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.075"
        android:minHeight="24dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_alignParentStart="true"
            android:id="@+id/profile_screen_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button_description"
            android:src="@drawable/baseline_arrow_back_24"
            style="@style/Button.Primary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Heading.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="My Profile"
            android:textColor="@color/thistle">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_alignParentEnd="true"
            android:id="@+id/profile_screen_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button_description"
            android:src="@drawable/baseline_edit_24"
            style="@style/Button.Primary"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="0.45"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_margin="32dp"
            android:scaleX="2"
            android:scaleY="2"
            android:id="@+id/profile_screen_profile"
            style="@style/Profile.Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/user_profile_description"
            android:src="@drawable/baseline_person_24">

        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_screen_name"
            style="@style/Heading.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_screen_profile"
            android:layout_centerInParent="true"
            android:text="@string/username"
            android:textColor="@color/thistle">

        </com.google.android.material.textview.MaterialTextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_screen_text"
            android:layout_below="@+id/profile_screen_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintEnd_toStartOf="@id/profile_screen_code_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/profile_screen_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SCORE"
                style="@style/small"
                android:textColor="@color/white">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintStart_toEndOf="@+id/profile_screen_score_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/profile_screen_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/small"
                android:text="CODES"
                android:textColor="@color/white">

            </com.google.android.material.textview.MaterialTextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_below="@+id/profile_screen_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintEnd_toStartOf="@id/profile_screen_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/profile_screen_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2506"
                style="@style/Heading.4"
                android:textColor="@color/white">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintStart_toEndOf="@+id/profile_screen_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/profile_screen_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Heading.4"
                android:text="2506"
                android:textColor="@color/white">

            </com.google.android.material.textview.MaterialTextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HISTORY"
                android:textColor="@color/thistle">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/profile_screen_button_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="sort"
                android:src="@drawable/baseline_sort_24"
                style="@style/Button.Primary"
                android:layout_marginEnd="16dp"/>

        </RelativeLayout>

    </RelativeLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_screen_qr_codes"
        android:layout_weight="0.475"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>